# code-analysis-bcc-classification-results

./: Dockerfile  Makefile  README.md  pyproject.toml
data/: ai_video_scores_anon.csv  simple_diags_CT.csv
notebooks/: Compute_statistics.ipynb
src/: CI_utils.py  plot_utils.py
