[tool.poetry]
name = "bcc-classification-analysis"
version = "0.0.1"
description = "Repository for BCC classification result analysis"
homepage = "https://github.com/Optimox/code-analysis-bcc-classification-results"
repository = "https://github.com/Optimox/code-analysis-bcc-classification-results"
documentation = "https://github.com/Optimox/code-analysis-bcc-classification-results"
readme = "README.md"
authors = []
keywords = []
exclude = []

[tool.poetry.dependencies]
python = "^3.10"

numpy="^1.17"
tqdm="^4.36"
scikit-learn="1.0.2"
scipy=">1.4"
plotly = "^4.8.1"
jupyterthemes = "^0.20.0"
matplotlib="3.1.1"
jupyter="1.0.0"
openpyxl = "^3.0.9"
pandas = "^2.2.2"
confidenceinterval = "^1.0.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
